ISAICP-6159: Fix comment user profile following line gap.

--- a/web/themes/joinup/scss/components/_comment.scss
+++ b/web/themes/joinup/scss/components/_comment.scss
@@ -48,7 +48,7 @@
     display: inline-block;
     width: 2px;
     background-color: $color-grey-bg;
-    height: 80%;
+    height: 100%;
     margin: 10px 0 0 34px;
   }
 }
